Closed Bug 1734819 Opened 4 years ago Closed 3 years ago

[wayland] Select popup in web-extension popup doesn't show up.

Categories

(Core :: Widget, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: emilio, Assigned: stransky, NeedInfo)

References

(Blocks 1 open bug)

Details

Attachments

(6 files)

This happens regardless of my fix for bug 1732829. If I install this add-on, showing the popup sometimes works, sometimes doesn't. Usually requires 3 or 4 clicks.

(I'm on Gnome 40 on Fedora 34)

Flags: needinfo?(stransky)

Emilio, is that recent regression?

Also can you attach log of MOZ_LOG="WidgetPopup:5" when it fails to open?

Flags: needinfo?(stransky)

btw. works for me, at least with stock Firefox from Fedora 34 (93.0).

I'll try to get a regression range.

Flags: needinfo?(emilio)

It doesn't work for me on stock Fedora 34 either (nor on Nightly, nor on mozregression --launch 93):

Name 	Firefox
Version 	93.0
Build ID 	20211007233316
Distribution ID 	fedora
User Agent 	Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:93.0) Gecko/20100101 Firefox/93.0
OS 	Linux 5.14.10-200.fc34.x86_64 #1 SMP Thu Oct 7 20:49:53 UTC 2021
OS Theme 	Matcha-dark-azul / Matcha-azul
Application Binary 	/usr/lib64/firefox/firefox

Will try to get the log.

No longer blocks: wayland
Priority: -- → P3
Attached patch debugging patchSplinter Review

I applied that to make some more sense of the logs. Let me know if you want a version of it landed somehow.

Flags: needinfo?(emilio)
Attached file bad.log

This is a log of just opening the extension popup and clicking on the select (which didn't show up).

Flags: needinfo?(stransky)
Attached file better.log

This is a log of me doing the same but clicking on the select a couple times, which eventually opened it.

(In reply to Emilio Cobos Álvarez (:emilio) from comment #6)

I applied that to make some more sense of the logs. Let me know if you want a version of it landed somehow.

Yes please, it looks great!

Flags: needinfo?(stransky)
Flags: needinfo?(stransky)
Depends on: 1737044

Can you please run with MOZ_LOG="Widget:5, WidgetPopup:5", click only once on the extension button (I expect the popup won't be shown), close browser and attach the log here?

Flags: needinfo?(stransky) → needinfo?(emilio)
Attached file Log as requested
Flags: needinfo?(emilio)

(just so it doesn't fall out the radar)

Flags: needinfo?(stransky)

Hm, from the log the popup is visible...looks like a rendering bug.

Please comment out gtk_widget_set_app_paintable() calls from nsWindow.cpp, rebuild and try again. You may see an empty popup after the click.

Flags: needinfo?(stransky) → needinfo?(emilio)
Assignee: nobody → stransky
Status: NEW → ASSIGNED

(In reply to Martin Stránský [:stransky] (ni? me) from comment #13)

Please comment out gtk_widget_set_app_paintable() calls from nsWindow.cpp, rebuild and try again. You may see an empty popup after the click.

Nope, still no popup :/

However after forcing useMoveToRect to false, then I get the popup consistently.

Flags: needinfo?(emilio)

The severity field is not set for this bug.
:jimm, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jmathies)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/77902cd88a58 [Linux] Make window transparency configurable, r=emilio
Severity: -- → N/A
Flags: needinfo?(jmathies)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/e204587ab6bc [Linux] Make move-to-rect configurable, r=emilio

The severity field is not set for this bug.
:jimm, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jmathies)
Flags: needinfo?(stransky)

I try to install this extension https://addons.mozilla.org/en-US/firefox/addon/surfshark-vpn-proxy/

But the popup never shows. I still cannot install this extension.

I tried a couple of extensions. Never succeed.

Firefox 93 on openSUSE Tumbleweed KDE Wayland.

(In reply to Guo Yunhe from comment #23)

I try to install this extension https://addons.mozilla.org/en-US/firefox/addon/surfshark-vpn-proxy/

But the popup never shows. I still cannot install this extension.

I tried a couple of extensions. Never succeed.

Firefox 93 on openSUSE Tumbleweed KDE Wayland.

Can you try Firefox 94 and latest nightly?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Testing_Mozilla_binaries
Thanks.

Flags: needinfo?(stransky)
Flags: needinfo?(jmathies)
Flags: needinfo?(i)

The leave-open keyword is there and there is no activity for 6 months.
:spohl, maybe it's time to close this bug?
For more information, please visit auto_nag documentation.

Flags: needinfo?(spohl.mozilla.bugs)

Seems to work consistently now.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Flags: needinfo?(spohl.mozilla.bugs)
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: