Bug 1734819 [Linux] Make window transparency configurable, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D129249